# NBA-ML-Career-Projections

./: .gitignore  README.md  pyproject.toml
data/final/: final_rookie_stats.csv  final_rookie_stats_TOTAL.csv  final_soph_stats.csv  final_soph_stats_TOTAL.csv
data/model_output/: FINAL_ROOKIE_TABLE.csv  FINAL_SOPH_TABLE.csv  rookie_allstar_probs.csv  rookie_similarities.csv  soph_allstar_probs.csv  soph_similarities.csv
data/processed/: advanced_stats.csv  per_game_stats.csv  per_poss_stats.csv  rookie_sophomore_headshots.csv  team_logos.csv
data/raw/advanced/: 1990_season_advanced_stats.csv  1991_season_advanced_stats.csv  1992_season_advanced_stats.csv  1993_season_advanced_stats.csv  1994_season_advanced_stats.csv  1995_season_advanced_stats.csv  1996_season_advanced_stats.csv  1997_season_advanced_stats.csv  1998_season_advanced_stats.csv  1999_season_advanced_stats.csv  2000_season_advanced_stats.csv  2001_season_advanced_stats.csv  2002_season_advanced_stats.csv  2003_season_advanced_stats.csv  2004_season_advanced_stats.csv  2005_season_advanced_stats.csv  2006_season_advanced_stats.csv  (+20 more)
source/data/: clean.py  extract.py  transform.py
source/models/: feature_selection.py  rookie_knn_model.ipynb  rookie_rf_model.ipynb  soph_knn_model.ipynb  soph_rf_model.ipynb
source/visualizations/: rookie_projections.html  rookie_table.ipynb  soph_table.ipynb
src/data/: clean.py  transform.py
src/models/: rookie_rf_model.ipynb  soph_knn_model.ipynb  soph_rf_model.ipynb
src/visualizations/: rookie_table.ipynb  sophomore_projections.html
(+79 files in other folders)
